# cv-rewrite

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml
api/: .env.example  .gitignore  cv_coach.md  main.py  pyproject.toml
api/src/api/: schemas.py
api/src/api/routers/: coach.py
api/src/config/: container.py
api/src/domain/: entities.py  ports.py  use_cases.py
api/src/infra/: anthropic_coach.py  coaching_schema.py  guide_schema.py  ollama_coach.py  pdf_renderer.py  pdf_text.py  prompts.py  settings.py
cvrewriteui/: components.json  package.json  pnpm-lock.yaml  react-router.config.ts  vite.config.ts
cvrewriteui/app/: app.css  root.tsx
cvrewriteui/app/components/: ApiKeyDialog.tsx  results.tsx
cvrewriteui/app/components/ui/: alert-dialog.tsx  attachment.tsx  card.tsx  checkbox.tsx  dialog.tsx  drawer.tsx  empty.tsx  field.tsx  input-group.tsx  input-otp.tsx  marker.tsx  popover.tsx  progress.tsx  sheet.tsx  switch.tsx
cvrewriteui/app/hooks/: use-api-key.ts
cvrewriteui/app/lib/: api.ts  apikey-store.ts
cvrewriteui/app/routes/: home.tsx
cvrewriteui/scripts/: copy-to-api.mjs
