[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi[standard]>=0.139.0",
    "fpdf2>=2.7",
    "ollama>=0.6.2",
    "punq>=0.8.0",
    "pydantic-settings>=2.0",
    "pypdf>=6.14.2",
]
